kubernetes/core/external-secrets/base/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets-controller
  namespace: external-secrets
spec:
  description: "Allow ESO controller to reach Vault and kube-apiserver"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: external-secrets
  egress:
    - toEntities:
        - kube-apiserver
    - toCIDR:
        - 10.0.2.0/24
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets-webhook
  namespace: external-secrets
spec:
  description: "Allow kube-apiserver to reach ESO webhook"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: external-secrets-webhook
  ingress:
    - fromEntities:
        - kube-apiserver
    - fromEntities:
        - remote-node
        - host
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
            - port: "443"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets-cert-controller
  namespace: external-secrets
spec:
  description: "Allow ESO cert-controller to reach kube-apiserver"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: external-secrets-cert-controller
  egress:
    - toEntities:
        - kube-apiserver
